# 2025_01_18_betting-program

./: Anchor.toml  ReadMe.md  package-lock.json  package.json
programs/betting-program/: Cargo.toml
programs/betting-program/src/: constants.rs  errors.rs  lib.rs  state.rs
programs/betting-program/src/instructions/: claim_reward.rs  close_market.rs  create_market.rs  mod.rs  place_bet.rs  set_winning_outcome.rs  settle_market.rs
tests/: betting-program.ts
